--- a/libraries/botbuilder/package.json
+++ b/libraries/botbuilder/package.json
@@ -2,7 +2,7 @@
   "name": "botbuilder",
   "author": "Microsoft Corp.",
   "description": "Bot Builder is a framework for building rich bots on virtually any platform.",
-  "version": "4.0.0-preview1.2",
+  "version": "4.0.1",
   "license": "MIT",
   "keywords": [
     "botbuilder",
@@ -23,9 +23,9 @@
     "@types/node": "^9.3.0",
     "@types/filenamify": "^2.0.1",
     "async-file": "^2.0.2",
-    "botbuilder-core": "4.0.0-preview1.2",
-    "botbuilder-core-extensions": "4.0.0-preview1.2",
-    "botframework-connector": "4.0.0-preview1.2",
+    "botbuilder-core": "4.0.1-preview1.3456",
+    "botbuilder-core-extensions": "4.0.1-preview1.3456",
+    "botframework-connector": "4.0.1-preview1.3456",
     "filenamify": "^2.0.0",
     "readline": "^1.3.0"
   },
